HEAD only (unreleased)

  New Features

    - ActionsTool: Improved add form for 'CMF Action' objects.
      Presettings can now be loaded from Action settings in setup profiles.

    - CMFSetup and GenericSetup: Added catalog tool setup handlers.
      This includes node adapters for PluginIndexes, ZCTextIndex and ZCatalog.
      Support for additional indexes can be added by providing INodeExporter
      and INodeImporter adapters. All indexes are cleared by this handler, so
      please make sure to re-catalog existing content if necessary.

    - GenericSetup.utils: Added new sub-framework for XML im- and export.
      Instead of using ConfiguratorBase configurators should now implement
      INodeExporter and INodeImporter. These node adapters should subclass
      from NodeAdapterBase and mix in ObjectManagerHelpers and / or
      PropertyManagerHelpers if needed.

    - CMFCore.exportimport:  Added framework and interfaces for exporting
      and importing content using the export / import contexts provided by
      GenericSetup.

    - CMFSetup: Split off GenericSetup.
      GenericSetup allows to use CMFSetup functionality outside CMF. See the
      README.txt of GenericSetup for details.

    - Interfaces: Converted all interfaces to zope 3 style interfaces.
      Most interfaces are bridged back to zope 2 style interfaces to provide
      backwards compatibility.

    - The features of CMFonFive have been folder into CMFCore and
      CMFDefault:

      * Zope 3 menus (browser:menu) are bridged to CMF actions using the
        portal_fiveactions tool. Any menuItem registered will be
        accessible though the portal_actions tool, where the menu for
        which the item was registered will be used as the action
        category.

      * The Zope 3 'cmf' skin layer provides integration between the
        Zope3 standard macros and the CMF main template, by redefining
        five_template.pt.
