@@ -24,7 +24,10 @@
                 priv_checked="getPrivate() and 'checked' or ''"
                 nt_checked="getNoTransform() and 'checked' or ''"
                 e304_checked="getEnable304s() and 'checked' or ''"
-                s_max_age_secs="getSMaxAgeSecs() is not None and getSMaxAgeSecs() or ''">
+                s_max_age_secs="getSMaxAgeSecs() is not None and getSMaxAgeSecs() or ''"
+                last_modified_checked="getLastModified() and 'checked' or ''"
+                pre_check="test(getPreCheck() is None, '', getPreCheck())"
+                post_check="test(getPostCheck() is None, '', getPostCheck())">
 
        <input type="hidden" name="policy_id" value="&dtml-getPolicyId;">
        <input type="hidden" name="no_cache:default:int" value="0">
@@ -35,6 +38,7 @@
        <input type="hidden" name="private:default:int" value="0">
        <input type="hidden" name="no_transform:default:int" value="0">
        <input type="hidden" name="enable_304s:default:int" value="0">
+       <input type="hidden" name="last_modified:default:int" value="0">
 
        <table>
 
@@ -54,11 +58,7 @@
                 size="40">
        </td>
 
-       <th align="right"> No-cache? </th>
-       <td>
-         <input type="checkbox" name="no_cache:int"
-                                value="1" &dtml-nc_checked;>
-       </td>
+       <td colspan="2">&nbsp;</td>
        </tr>
 
        <tr valign="top">
@@ -68,6 +68,21 @@
                 name="mtime_func"
                 value="&dtml-getMTimeFunc;"
                 size="40">
+       </td>
+
+       <th align="right">Last-Modified?</th>
+       <td>
+         <input type="checkbox"
+                name="last_modified:int"
+                value="1" &dtml-last_modified_checked;>
+       </td>
+       </tr>
+
+       <tr valign="top">
+       <th align="right"> No-cache? </th>
+       <td>
+         <input type="checkbox" name="no_cache:int"
+                                value="1" &dtml-nc_checked;>
        </td>
 
        <th align="right"> No-store? </th>
@@ -104,6 +119,22 @@
        <td>
          <input type="checkbox" name="proxy_revalidate:int"
                                 value="1" &dtml-pr_checked;>
+       </td>
+       </tr>
+
+       <tr valign="top">
+       <th align="right"> Pre-check (secs) </th>
+       <td>
+         <input type="text"
+                name="pre_check"
+                value="&dtml-pre_check;">
+       </td>
+
+       <th align="right"> Post-check (secs) </th>
+       <td>
+         <input type="text"
+                name="post_check"
+                value="&dtml-post_check;">
        </td>
        </tr>
 
@@ -185,6 +216,7 @@
   <td align="left">
     <form action="&dtml-absolute_url;">
 
+       <input type="hidden" name="last_modified:default:int" value="0">
        <input type="hidden" name="no_cache:default:int" value="0">
        <input type="hidden" name="no_store:default:int" value="0">
        <input type="hidden" name="must_revalidate:default:int" value="0">
@@ -209,16 +241,25 @@
          <input type="text" name="predicate" size="40">
        </td>
 
-       <th align="right"> No-cache? </th>
-       <td>
-         <input type="checkbox" name="no_cache:int" value="1">
-       </td>
+       <td colspan="2">&nbsp;</td>
        </tr>
 
        <tr valign="top">
        <th align="right"> Mod. time </th>
        <td>
          <input type="text" name="mtime_func" size="40">
+       </td>
+
+       <th align="right"> Last-Modified? </th>
+       <td>
+         <input type="checkbox" name="last_modified:int" value="1">
+       </td>
+       </tr>
+
+       <tr>
+       <th align="right"> No-cache? </th>
+       <td>
+         <input type="checkbox" name="no_cache:int" value="1">
        </td>
 
        <th align="right"> No-store? </th>
@@ -252,6 +293,22 @@
        <td>
          <input type="checkbox" name="proxy_revalidate:int"
                                 value="1">
+       </td>
+       </tr>
+
+       <tr valign="top">
+       <th align="right"> Pre-check (secs) </th>
+       <td>
+         <input type="text"
+                name="pre_check"
+                value="">
+       </td>
+
+       <th align="right"> Post-check (secs) </th>
+       <td>
+         <input type="text"
+                name="post_check"
+                value="">
        </td>
        </tr>
 
